photos.html: photo distortion fixed

--- a/oclubs/static-dev/css/oclubs.pcss
+++ b/oclubs/static-dev/css/oclubs.pcss
@@ -652,7 +652,7 @@ body {
 
 	& img {
 		padding-top: 10px;
-		width: 150px;
+		min-width: 75px;
 		height: 100px;
 		display: block;
 		margin-left: auto;
